--- a/todo-cli/Cargo.toml
+++ b/todo-cli/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 serde_json = "1.0.60"
 clap = {version = "3.2.20", features = ["derive"]}
 prettytable-rs = "0.9.0"
+thiserror = "1.0.35"
