--- a/simple-exercises/Cargo.toml
+++ b/simple-exercises/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde_json = "1.0.60"
+serde = {version = "1.0.145", features = ["derive"]}
+thiserror = "1.0.35"
+sha2 = {version = "0.10.6"}
+hex = {version = "0.4.3"}
